fixed spacing

--- a/public/VIC2010/vij.css
+++ b/public/VIC2010/vij.css
@@ -78,7 +78,7 @@ margin-bottom:20px;
 }
 
 #main {
-    margin-top:20px;
+    margin-top:30px;
     margin-left:350px;
     width:600px;
     text-align:left;
